Possibility to save round

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,11 @@ server.port=8888
 
 email.fromAddress=klaus.julin@gmail.com
 email.fromName=Caddie
+
+mongo.url=mongodb://ds045948.mongolab.com:45948
+mongo.database=caddie_mongo
+mongo.username=caddie_mongo_user
+mongo.password=8SD22fsdd98
+
+
+logging.level.org.springframework: TRACE
