--- a/shippable.yml
+++ b/shippable.yml
@@ -1,3 +1,12 @@
 # Build Environment
 build_environment: Ubuntu 12.04
 
+# language setting
+language: node_js
+
+# version numbers
+node_js:
+  - "0.11"
+  
+#run tests  
+script: npm test
