--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -10,6 +10,6 @@
     "karma-chrome-launcher": "~0.1.4"
   },
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS"
+    "test": "./node_modules/karma/bin/karma start karma.ci.js"
   }
 }
