--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -7,7 +7,8 @@
     "karma-coverage": "~0.2.4",
     "karma-phantomjs-launcher": "~0.1.4",
     "karma-jasmine": "~0.1.5",
-    "karma-chrome-launcher": "~0.1.4"
+    "karma-chrome-launcher": "~0.1.4",
+    "karma-junit-reporter": "~0.2.2"
   },
   "scripts": {
     "test": "./node_modules/karma/bin/karma start karma.ci.js"
