Club selection, refactored round data collector

--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -8,7 +8,8 @@
     "karma-phantomjs-launcher": "~0.1.4",
     "karma-jasmine": "~0.1.5",
     "karma-chrome-launcher": "~0.1.4",
-    "karma-junit-reporter": "~0.2.2"
+    "karma-junit-reporter": "~0.2.2",
+    "karma-ng-html2js-preprocessor": "~0.1.0"
   },
   "scripts": {
     "test": "./node_modules/karma/bin/karma start karma.ci.js"
