--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,4 @@ mongo.database=caddie_mongo
 mongo.username=caddie_mongo_user
 mongo.password=8SD22fsdd98
 
-
-logging.level.org.springframework: TRACE
+logging.level.org.springframework.web: DEBUG
